# libqrencode

./: CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  README  configure.h.in
tests/: CMakeLists.txt
